style: fix block collapse in the absence of error text

--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,6 +1,7 @@
 .popup__input-error {
   display: block;
   visibility: hidden;
+  flex-basis: 15px;
 
   margin: 0;
   margin-top: 5px;
